tests/typechecking/invalid/array_elements_mistmatch.ml
let n = 3 + 2 in
let x = 3. -. 1. in
let a = Array.create n x in
let b = 1 +. a.(1) in
()
